pkg/front_end/testcases/no_such_method_forwarders/abstract_accessors_from_field_one_defined.dart.weak.outline.expect
library;
import self as self;
import "dart:core" as core;

abstract class A extends core::Object {
  field core::int? foo;
  synthetic constructor •() → self::A
    ;
}
abstract class B extends core::Object implements self::A {
  synthetic constructor •() → self::B
    ;
  get foo() → core::int?
    ;
  method noSuchMethod(core::Invocation i) → dynamic
    ;
}
class C extends self::B {
  synthetic constructor •() → self::C
    ;
  no-such-method-forwarder set foo(core::int? value) → void
    return this.{self::B::noSuchMethod}(new core::_InvocationMirror::_withType(#foo=, 2, const <core::Type*>[], core::List::unmodifiable<dynamic>(<dynamic>[value]), core::Map::unmodifiable<core::Symbol*, dynamic>(const <core::Symbol*, dynamic>{}))){(core::Invocation) → dynamic};
}
abstract class D extends core::Object implements self::A {
  synthetic constructor •() → self::D
    ;
  set foo(core::int? value) → void
    ;
  method noSuchMethod(core::Invocation i) → dynamic
    ;
}
class E extends self::D {
  synthetic constructor •() → self::E
    ;
  no-such-method-forwarder get foo() → core::int?
    return this.{self::D::noSuchMethod}(new core::_InvocationMirror::_withType(#foo, 1, const <core::Type*>[], const <dynamic>[], core::Map::unmodifiable<core::Symbol*, dynamic>(const <core::Symbol*, dynamic>{}))){(core::Invocation) → dynamic} as{TypeError,ForDynamic} core::int?;
}
static method expectTypeError(() → dynamic callback) → void
  ;
static method main() → dynamic
  ;


Extra constant evaluation status:
Evaluated: SymbolLiteral @ org-dartlang-testcase:///abstract_accessors_from_field_one_defined.dart:26:7 -> SymbolConstant(#foo=)
Evaluated: ListLiteral @ org-dartlang-testcase:///abstract_accessors_from_field_one_defined.dart:26:7 -> ListConstant(const <Type*>[])
Evaluated: MapLiteral @ org-dartlang-testcase:///abstract_accessors_from_field_one_defined.dart:26:7 -> MapConstant(const <Symbol*, dynamic>{})
Evaluated: SymbolLiteral @ org-dartlang-testcase:///abstract_accessors_from_field_one_defined.dart:37:7 -> SymbolConstant(#foo)
Evaluated: ListLiteral @ org-dartlang-testcase:///abstract_accessors_from_field_one_defined.dart:37:7 -> ListConstant(const <Type*>[])
Evaluated: ListLiteral @ org-dartlang-testcase:///abstract_accessors_from_field_one_defined.dart:37:7 -> ListConstant(const <dynamic>[])
Evaluated: MapLiteral @ org-dartlang-testcase:///abstract_accessors_from_field_one_defined.dart:37:7 -> MapConstant(const <Symbol*, dynamic>{})
Extra constant evaluation: evaluated: 19, effectively constant: 7
